# POO-Semana6-tarea

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: calificador-ci.yml  release.yml
modelos/: cliente.py  orden_compra.py  producto.py  proveedor.py
pagos/: pago.py  pago_efectivo.py  pago_tarjeta.py  pago_transferencia.py
servicios/: gestores.py
test/: test_pagos.py
