[project]
name = "poo-b2-semana3-actividad"
version = "0.1.0"
description = "Proyecto de Programación Orientada a Objetos con automatización de release y Docker"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Tu Nombre" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"